[tool.poetry]
name = "ids568mlops-milestone0"
version = "0.1.0"
description = "MLOps Milestone 0: Reproducible Environment & CI Setup"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.10"   
numpy = "1.24.3"   
pandas = "2.0.3"  
pytest = "7.4.0"   

[tool.poetry.dev-dependencies]
 
black = "23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
